# OpenCV-IRIS

./: CMakeLists.txt
FP_Magang/ball_detection/: CMakeLists.txt
FP_Magang/devel/: local_setup.sh
FP_Magang/devel/lib/ball_detection/: image_capture_node
FP_Magang/devel/lib/pkgconfig/: ball_detection.pc
FP_Magang/src/ball_detection/launch/: ball_detection.launch
FP_Magang/src/ball_detection/src/: main_processing_node.cpp
FP_Magang/src/basestation/: package-lock.json  package.json
devel/: _setup_util.py  setup.sh
devel/lib/ball_detection/: image_processing_node  main_processing_node
devel/share/ball_detection/cmake/: ball_detectionConfig.cmake
my_opencv_project/src/: main.cpp
opencv_project/: CMakeLists.txt  Tugas1.cpp  dataset.csv
robot_tracker/: CMakeLists.txt  package.xml
robot_tracker/src/: robot_tracker.cpp
src/ball_detection/: package.xml
src/ball_detection/src/: image_capture_node.cpp  image_processing_node.cpp
src/basestation/: basestation.js
turtle_writer/: CMakeLists.txt  package.xml
turtle_writer/src/: Turtlesim.cpp
